--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,6 @@ flutter:
     - family: NewYorkTimes
       fonts:
         - asset: assets/fonts/NewYorkTimes.ttf
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - family: PoltawskiNowy
+      fonts:
+        - asset: assets/fonts/PoltawskiNowy-Regular.ttf
